--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,41 @@
-.App {
-  text-align: center;
+.app {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    background: linear-gradient( rgba(255,255,255,0.7), rgba(255,255,255,0.3)
+    ), url("https://versia.com.br/wp-content/uploads/2022/02/adega-debacco-dual-zone-para-46-garrafas-abertura-lado-esquerdo-220v-2.jpg");
+    background-size: cover;
+    background-position: center;  
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+form {
+    background-color: rgba(255,255,255,0.7);
+    padding: 0px 60px;
+    border-radius: 10px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h1 {
+    color: gray;
+    text-align: center;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+button {
+    width: 100%;
+    height: 50px;
+    padding: 10px;
+    border: none;
+    background-color: gray;
+    color: aliceblue;
+    border-radius: 5px;
+    font-weight: bold;;
+    font-size: 18px;
+    cursor: pointer;
+    margin-top: 15px;
+    margin-bottom: 30px;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button:hover {
+    background-color: rgb(207, 205, 205);
+    color: gray;
 }
